php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27157 php 4.3.4 sybase-ct make failure
Submitted: 2004-02-05 06:08 UTC Modified: 2004-02-17 14:30 UTC
From: detoma dot alessandro at sea-aeroportimilano dot it Assigned: thekid (profile)
Status: Closed Package: Compile Failure
PHP Version: 4CVS, 5CVS OS: solaris 8
Private report: No CVE-ID: None
 [2004-02-05 06:08 UTC] detoma dot alessandro at sea-aeroportimilano dot it
Description:
------------
./configure \
--with-apxs2=/appl/apache/bin/apxs \
--with-oracle=/oracle/product/8.1.7 \
--with-sybase-ct=/database/sybase/OCS-12_0 \
--with-openssl=/usr/local/ssl \
--with-jpeg-dir=/usr/local \
--with-zlib-dir=shared \
--with-png-dir=/usr/local \
--with-tsrm-pthreads \
--with-curl=/usr/local

make fail when I compile with sybase library 12.0 :

/bin/sh /usr/local/src/php-4.3.4/libtool --silent --preserve-dup-deps --mode=compile /usr/local/src/php-4.3.4/meta_ccld  -Iext/sybase_ct/ -I/usr/local/src/php-4.3.4/ext/sybase_ct/ -DPHP_ATOM_INC -I/usr/local/src/php-4.3.4/include -I/usr/local/src/php-4.3.4/main -I/usr/local/src/php-4.3.4 -I/usr/local/src/php-4.3.4/Zend -I/usr/local/ssl/include -I/usr/local/include -I/oracle/product/8.1.7/rdbms/public -I/oracle/product/8.1.7/rdbms/demo -I/database/sybase/OCS-12_0/include -I/usr/local/src/php-4.3.4/ext/xml/expat  -D_POSIX_PTHREAD_SEMANTICS -D_POSIX_PTHREAD_SEMANTICS -D_REENTRANT -I/usr/local/src/php-4.3.4/TSRM -DTHREAD=1  -g -mt -DZTS  -prefer-pic -c /usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c -o ext/sybase_ct/php_sybase_ct.lo
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 241: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 241: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 241: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 241: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 241: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 242: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 242: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 242: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 242: non-constant initializer: op "U&"
"/usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c", line 242: non-constant initializer: op "U&"
cc: acomp failed for /usr/local/src/php-4.3.4/ext/sybase_ct/php_sybase_ct.c
*** Error code 1
make: Fatal error: Command failed for target `ext/sybase_ct/php_sybase_ct.lo'



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-02-08 11:07 UTC] thekid@php.net
Compiles fine with --enable-maintainer-zts or without, problem seems to be related to --with-tsrm-pthreads.

Line 241 reads the following:
static int _call_message_handler(zval *callback_name, CS_SERVERMSG *srvmsg TSRMLS_DC)

I can't see anything obviously wrong with this, it fits the scheme of numerous other function declarations in, for example, ext/standard.
 [2004-02-08 11:23 UTC] thekid@php.net
Wait, I just saw the second compile failure shows lines 248 and 249 as where the errors occur.

-- snip --
zval severity, msgnumber, state, line, text;
zval *ptrs[5]= {&msgnumber, &severity, &state, &line, &text};
zval **args[5]= {&ptrs[0], &ptrs[1], &ptrs[2], &ptrs[3], &ptrs[4]};
-- snip --

OK, then this isn't related to ZTS and not to my recent changes either, as this code has been there (or a couple of lines before that) for quite a while now (revision 1.71 or PHP 4.3.0).
 [2004-02-08 11:45 UTC] thekid@php.net
See if the following patch fixes it for you:
http://sitten-polizei.de/php_sybase_ct.c.diff
 [2004-02-16 05:52 UTC] detoma dot alessandro at sea-aeroportimilano dot it
I try with latest version of php.
this version is better but the following error occur when I run "make install":


make install

Installing PHP SAPI module:       apache2handler
/appl/apache/build/instdso.sh SH_LIBTOOL='/appl/apache/build/libtool' libphp4.la /appl/apache/modules
/appl/apache/build/libtool --mode=install cp libphp4.la /appl/apache/modules/
cp .libs/libphp4.so /appl/apache/modules/libphp4.so
chmod +x /appl/apache/modules/libphp4.so
cp .libs/libphp4.lai /appl/apache/modules/libphp4.la
libtool: install: warning: remember to run `libtool --finish /usr/local/src/php4-STABLE-200402160830/libs'
chmod 755 /appl/apache/modules/libphp4.so
[activating module `php4' in /appl/apache/conf/httpd.conf]
Installing PHP CLI binary:        /usr/local/bin/
Installing PHP CLI man page:      /usr/local/man/man1/
Installing PEAR environment:      /usr/local/lib/php/

Open Client Message:
Message number: LAYER = (5) ORIGIN = (3) SEVERITY = (5) NUMBER = (131)
Message String: ct_init(): network packet layer: internal net library error: Attempt to load protocol driver failed
[PEAR] Archive_Tar    - already installed: 1.1
[PEAR] Console_Getopt - upgraded:  1.2
[PEAR] PEAR           - upgraded:  1.3b6
Wrote PEAR system config file at: /usr/local/etc/pear.conf
You may want to add: /usr/local/lib/php to your php.ini include_path
*** Error code 139
The following command caused the error:
/usr/local/src/php4-STABLE-200402160830/sapi/cli/php -n -dshort_open_tag=0 -dsafe_mode=0 /usr/local/src/php4-STABLE-200402160830/pear/install-pear.php -d "/usr/local/lib/php" -b "/usr/local/bin" /usr/local/src/php4-STABLE-200402160830/pear/package-*.xml
make: Fatal error: Command failed for target `install-pear-installer'
Current working directory /usr/local/src/php4-STABLE-200402160830
*** Error code 1
make: Fatal error: Command failed for target `install-pear'

Thanks
 [2004-02-16 11:06 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

The sybase compilation error is fixed (you wouldn't be able 
to get the PEAR install) if it was not. The PEAR problem 
you are seeing is due to a configuration problem on your 
end. Look at the error message. 
 [2004-02-17 14:30 UTC] detoma dot alessandro at sea-aeroportimilano dot it
Thank you for your replay.
I look the error but I don't understand where is the error of configuration.
I try to add the "/usr/local/lib/php" in my php.ini inclde_path but nothing to do.

Could you help me?

Best regards,
Alex
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 19:00:01 2026 UTC