- Changed initialization of function arguments to message handler # Hopefully fixes bug #27157 (Compile Failure on Solaris 8), user does # not know how to use patch and therefore couldn't verify this works.